2011-04-22  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        only include failures in full_results.json
        https://bugs.webkit.org/show_bug.cgi?id=59256

        * Scripts/webkitpy/layout_tests/layout_package/manager.py:

2011-04-22  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Roben.

        move times into their own json file
        https://bugs.webkit.org/show_bug.cgi?id=59239

        The test runtimes are the only case where we need an entry for
        every test that was run, including passing tests. Move them into
        their own json file so we can prune the other json files to only
        include failing tests.

        Use a trie-like data structure to hold the tests to avoid including
        full test paths. This cuts 52% of the filesize. The end result is ~700k
        pre-gzip.

        * Scripts/webkitpy/common/net/resultsjsonparser.py:
        Exclude times from the parsed TestResults.
        * Scripts/webkitpy/common/net/resultsjsonparser_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager.py:

2011-04-27  Anders Carlsson  <andersca@apple.com>

        More casts and more clang++ build fixes.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (createWebViewAndOffscreenWindow):
        * TestWebKitAPI/mac/PlatformWebViewMac.mm:
        (TestWebKitAPI::PlatformWebView::PlatformWebView):
        * WebKitTestRunner/mac/PlatformWebViewMac.mm:
        (WTR::PlatformWebView::PlatformWebView):

2011-04-27  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        lazily autoinstall thirdparty python libraries
        https://bugs.webkit.org/show_bug.cgi?id=55723

        This helps by only having pywebsocket installed when the bots run.  It